CDR api
